--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>On/Off</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
 </head>
 
 <body>
@@ -23,5 +24,6 @@
     </main>
     <script src="script.js"></script>
 </body>
+
 
 </html>
